--- a/src/Presentation/TransactionUploader/ClientApp/src/app/layout/navigation/navigation.component.html
+++ b/src/Presentation/TransactionUploader/ClientApp/src/app/layout/navigation/navigation.component.html
@@ -3,7 +3,7 @@
       class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
       
       <div class="container">
-        <a class="navbar-brand" [routerLink]="['/']">TransactionUploader</a>
+        <a class="navbar-brand" [routerLink]="['/']">Transaction uploader</a>
       </div>
     </nav>
   </header>
